<resources>
    <string name="app_name">WDA</string>
    <string name="text_open_statement" translatable="false">欢迎使用诊断小助手</string>
    <string name="text_login_account" translatable="false">账号</string>
    <string name="text_login_password" translatable="false">密码</string>
    <string name="text_login_remember" translatable="false">记住密码</string>
    <string name="text_login" translatable="false">登 录</string>
    <string name="text_login_account_hint" translatable="false">请输入您的账号</string>
    <string name="text_login_password_hint" translatable="false">请输入您的密码</string>
    <string name="text_main_security" translatable="false">安全算法</string>
    <string name="text_main_dtc" translatable="false">DTC</string>
    <string name="text_main_data" translatable="false">总线通讯</string>
    <string name="text_main_detection" translatable="false">数据读取</string>
    <string name="text_main_share" translatable="false">高级应用</string>
    <string name="text_main_account" translatable="false">账号：</string>
    <string name="text_main_user_name" translatable="false">用户名称：</string>
    <string name="text_main_role_type" translatable="false">角色类型：</string>
    <string name="text_main_expiration_date" translatable="false">到期时间：</string>
    <string name="text_main_tf_configuration" translatable="false">TF卡应用</string>
    <string name="text_link_vci" translatable="false">连接VCI</string>
    <string name="text_main_update_password" translatable="false">修改密码</string>
    <string name="text_main_language_settings" translatable="false">语言设置</string>
    <string name="text_main_about" translatable="false">关于</string>
    <string name="text_main_exit" translatable="false">退 出</string>
    <string name="text_ununited" translatable="false">未连接</string>
    <string name="text_connected" translatable="false">已连接</string>
    <string name="text_logout_exit" translatable="false">退出登录</string>
    <string name="text_logout_close" translatable="false">关闭应用</string>
    <string name="text_logout_cancel" translatable="false">取消</string>
    <string name="text_tf_card_title" translatable="false">TF卡应用</string>
    <string name="text_tf_card_export" translatable="false">导 出</string>
    <string name="text_asc_file_export" translatable="false">导出</string>
    <string name="text_tf_card_clean" translatable="false">清 空</string>
    <string name="text_tf_card_query" translatable="false">查询</string>
    <string name="text_tf_card_transcribe" translatable="false">永久录制：</string>
    <string name="text_tf_card_continuous_record" translatable="false">录制</string>
    <string name="text_tf_card_continuous_over" translatable="false">结束</string>
    <string name="text_tf_card_can_channel" translatable="false">CAN通道：</string>
    <string name="text_tf_card_setting_title" translatable="false">永久录制配置</string>
    <string name="text_tf_card_setting_time" translatable="false">存储时间：</string>
    <string name="text_tf_card_setting_time_unit" translatable="false">分</string>
    <string name="text_tf_card_setting_channel" translatable="false">录制通道</string>
    <string name="text_tf_card_setting_total" translatable="false">保留触发点前报文条数：</string>
    <string name="text_tf_card_setting_total_unit" translatable="false">条</string>
    <string name="text_tf_card_setting_bit" translatable="false">字节</string>
    <string name="text_tf_card_info_delete" translatable="false">确定要清空TF卡所有数据吗？</string>
    <string name="text_tf_card_delete_sure" translatable="false">已清空TF卡所有数据</string>
    <string name="text_export_tf_card_info" translatable="false">确定要导出文件吗？</string>
    <string name="text_link_vci_title" translatable="false">VCI连接</string>
    <string name="text_permissions_location_open" translatable="false">请开启定位</string>
    <string name="text_permissions_wifi" translatable="false">未开启WiFi，请手动打开WiFi并连接VCI热点</string>
    <string name="text_permissions_not_vciwifi" translatable="false">当前连接的不是一个有效的VCI热点</string>
    <string name="text_link_check_ssid" translatable="false">请设置热点名称</string>
    <string name="text_link_check_pass" translatable="false">密码不能少于8位</string>
    <string name="text_link_check_using" translatable="false">该VCI正在被其他设备使用中，确定要配置吗？</string>
    <string name="text_update_password_title" translatable="false">修改密码</string>
    <string name="text_update_password_old" translatable="false">旧密码</string>
    <string name="text_update_password_new" translatable="false">新密码</string>
    <string name="text_update_password_confirm" translatable="false">确认密码</string>
    <string name="text_update_password_old_hint" translatable="false">请输入旧密码</string>
    <string name="text_update_password_new_hint" translatable="false">请输入新密码</string>
    <string name="text_update_password_confirm_hint" translatable="false">输入确认密码</string>
    <string name="text_language_title" translatable="false">语言设置</string>
    <string name="text_about_title" translatable="false">关于</string>
    <string name="text_about_app_name" translatable="false">诊断小助手</string>
    <string name="text_about_introduction" translatable="false">功能介绍</string>
    <string name="text_about_checkver" translatable="false">检查新版本</string>
    <string name="text_about_function_title" translatable="false">功能介绍</string>
    <string name="text_function_detail_title" translatable="false">功能明细</string>
    <string name="text_inform_title">消息</string>
    <string name="text_inform_detail_title" translatable="false">通知详情</string>
    <string name="text_inform_inform" translatable="false">通知</string>
    <string name="text_inform_notice" translatable="false">公告</string>
    <string name="text_security_history_vehicle" translatable="false">车型：</string>
    <string name="text_security_history_type" translatable="false">类型：</string>
    <string name="text_history_configuration" translatable="false">配置：</string>
    <string name="text_security_history_ecu" translatable="false">模块：</string>
    <string name="text_security_history_supplier" translatable="false">供应商：</string>
    <string name="text_security_history_level" translatable="false">等级：</string>
    <string name="text_security_seed_key" translatable="false">Seed→Key</string>
    <string name="text_security_vin_pin" translatable="false">Vin→Pin</string>
    <string name="text_security_vin_esk" translatable="false">Vin→Esk</string>
    <string name="text_security_seed_pin_key" translatable="false">S＆P→Key</string>
    <string name="text_security_seed_key_title" translatable="false">Seed→Key</string>
    <string name="text_security_vin_pin_title" translatable="false">Vin→Pin</string>
    <string name="text_security_vin_esk_title" translatable="false">Vin→Esk</string>
    <string name="text_security_seed_pin_key_title" translatable="false">Seed＆Pin→Key</string>
    <string name="text_security_vehicle" translatable="false">车型</string>
    <string name="text_security_configuration" translatable="false">配置</string>
    <string name="text_security_ecu" translatable="false">模块</string>
    <string name="text_security_supplier" translatable="false">供应商</string>
    <string name="text_security_level" translatable="false">算法级别</string>
    <string name="text_security_calculate" translatable="false">计 算</string>
    <string name="text_security_calculate_success" translatable="false">计算成功</string>
    <string name="text_dtc_query" translatable="false">查询故障码</string>
    <string name="text_dtc_read" translatable="false">读/清故障码</string>
    <string name="text_dtc_vehicle" translatable="false">车型</string>
    <string name="text_dtc_configure" translatable="false">配置</string>
    <string name="text_dtc_module" translatable="false">模块</string>
    <string name="text_dtc_supplier" translatable="false">供应商：</string>
    <string name="text_dtc_dtc" translatable="false">DTC(SAE)：</string>
    <string name="text_dtc_hex_dtc" translatable="false">DTC(HEX)：</string>
    <string name="text_dtc_chinese_description" translatable="false">中文描述：</string>
    <string name="text_dtc_english_description" translatable="false">英文描述：</string>
    <string name="text_dtc_operating_conditions" translatable="false">运行条件：</string>
    <string name="text_dtc_setting_conditions" translatable="false">设置条件：</string>
    <string name="text_dtc_setting_after_conditions" translatable="false">设置时发生的操作：</string>
    <string name="text_dtc_restore_conditions" translatable="false">恢复条件：</string>
    <string name="text_dtc_activate_mil_regulations" translatable="false">激近故障灯原则：</string>
    <string name="text_dtc_mil_off_regulations" translatable="false">熄灭故障灯原则：</string>
    <string name="text_dtc_clear_conditions" translatable="false">清除故障码条件：</string>
    <string name="text_dtc_content" translatable="false">请输入DTC内容</string>
    <string name="text_dtc_query_details" translatable="false">故障码明细</string>
    <string name="text_dtc_read_export" translatable="false">导出</string>
    <string name="text_dtc_read_clear" translatable="false">清除</string>
    <string name="text_dtc_read_read" translatable="false">读取</string>
    <string name="text_datastream_title_message" translatable="false">总线监听</string>
    <string name="text_datastream_title_diagnostician" translatable="false">诊断通讯</string>
    <string name="text_datastream_title_did_analysis" translatable="false">DID解析</string>
    <string name="text_datastream_did_configure" translatable="false">选择配置：</string>
    <string name="text_datastream_did_module" translatable="false">选择模块：</string>
    <string name="text_datastream_did_screen" translatable="false">筛选DID：</string>
    <string name="text_datastream_message_export" translatable="false">导 出</string>
    <string name="text_datastream_message_map" translatable="false">映 射</string>
    <string name="text_datastream_message_record" translatable="false">软触发</string>
    <string name="text_select_map_way" translatable="false">选择映射方式</string>
    <string name="text_datastream_diagnostician_count" translatable="false">计 算</string>
    <string name="text_datastream_diagnostician_copy" translatable="false">复 制</string>
    <string name="text_message_missing" translatable="false">请输入完整的报文</string>
    <string name="text_message_sent" translatable="false">已发送</string>
    <string name="text_file_overtime" translatable="false">文件加载超时，请检查网络</string>
    <string name="text_message_num" translatable="false">序号</string>
    <string name="text_message_time" translatable="false">时间切换</string>
    <string name="text_vci_lose" translatable="false">未连接到VCI设备</string>
    <string name="text_jurisdiction_store_none" translatable="false">需要访问手机存储权限</string>
    <string name="text_connect_vci" translatable="false">正在连接VCI设备...</string>
    <string name="text_listen_close" translatable="false">监听关闭</string>
    <string name="text_connect_load" translatable="false">首次加载时间可能较长，请耐心等候</string>
    <string name="text_map_config" translatable="false">配置</string>
    <string name="text_message_stop" translatable="false">停止</string>
    <string name="text_message_start" translatable="false">启动</string>
    <string name="text_map_map" translatable="false">映射</string>
    <string name="text_select_map_aisle" translatable="false">选择映射通道</string>
    <string name="text_map_select_cartype" translatable="false">选择车型</string>
    <string name="text_map_select_supplier" translatable="false">选择供应商</string>
    <string name="text_map_temporary" translatable="false">临时映射</string>
    <string name="text_map_temporary_cancel" translatable="false">取消临时映射</string>
    <string name="text_map_perpetual" translatable="false">永久映射</string>
    <string name="text_map_perpetual_cancel" translatable="false">取消永久映射</string>
    <string name="text_record_setting" translatable="false">配 置</string>
    <string name="text_record_setting_maximum" translatable="false">可设置最大值为 </string>
    <string name="text_record_time_nozero" translatable="false">录制时间不可以为0</string>
    <string name="text_save" translatable="false">保 存</string>
    <string name="text_unchosen" translatable="false">未选择</string>
</resources>