<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_bottom">
        <com.gx.wda.widget.MyActionBar
            android:id="@+id/myActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <!--原来密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_update_password_old"/>
            <com.gx.wda.widget.PasswordEditText
                android:id="@+id/et_update_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="14dp"
                android:hint="@string/text_update_password_old_hint"/>
        </LinearLayout>
        <!--新密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_update_password_new"/>
            <com.gx.wda.widget.PasswordEditText
                android:id="@+id/et_update_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="14dp"
                android:hint="@string/text_update_password_new_hint"/>
        </LinearLayout>
        <!--确认密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_update_password_confirm"/>
            <com.gx.wda.widget.PasswordEditText
                android:id="@+id/et_update_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="14dp"
                android:hint="@string/text_update_password_confirm_hint"/>
        </LinearLayout>
        <!--保存按钮-->
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_enabled"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:enabled="false"
            android:text="@string/text_save"/>
    </LinearLayout>
</LinearLayout>