<?xml version="1.0" encoding="utf-8"?>
<!--线性布局  rootLayout 根布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite">
    <!--logo-->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="300dp"
       android:gravity="center">
       <ImageView
           android:layout_width="300dp"
           android:layout_height="300dp"
           android:scaleType="centerCrop"
           android:src="@drawable/logo"/>
   </LinearLayout>

    <!--表单布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <!--账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <!--TextView 文本  html的p标签-->
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_login_account"/>
            <EditText
                android:id="@+id/et_login_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:textSize="14dp"
                android:singleLine="true"
                android:hint="@string/text_login_account_hint" />
        </LinearLayout>
        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_login_password"/>
            <com.gx.wda.widget.PasswordEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="14dp"
                android:singleLine="true"
                android:hint="@string/text_login_password_hint"/>
        </LinearLayout>
        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/text_login_remember"/>
            <com.suke.widget.SwitchButton
                android:id="@+id/switch_button"
                android:layout_width="60dp"
                android:layout_height="35dp"
                app:sb_checked_color="@color/colorPrimary"
                app:sb_show_indicator="false"/>
        </LinearLayout>
        <!--登录按钮-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_enabled"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:text="@string/text_login"/>
    </LinearLayout>
</LinearLayout>