<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--标题栏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom">
            <com.gx.wda.widget.MyActionBar
                android:id="@+id/myActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:padding="15dp"
            android:orientation="horizontal">
            <!--TextView 文本  html的p标签-->
            <TextView
                android:id="@+id/et_record_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:text="@string/text_tf_card_setting_total"/>
            <EditText
                android:id="@+id/et_tfcard_setting_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="10"
                android:digits="1234567890"
                android:inputType="numberDecimal"
                android:hint="maximum of 2000"
                android:background="@null"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:layout_marginRight="5dp"
                android:text="@string/text_tf_card_setting_total_unit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:padding="15dp"
            android:orientation="horizontal">
            <!--TextView 文本  html的p标签-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:text="@string/text_tf_card_setting_time"/>
            <EditText
                android:id="@+id/et_tfcard_setting_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="10"
                android:digits="1234567890"
                android:hint="maximum of 30"
                android:inputType="numberDecimal"
                android:background="@null"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:layout_marginRight="5dp"
                android:text="@string/text_tf_card_setting_time_unit"/>
        </LinearLayout>
        <!--保存按钮-->
        <Button
            android:id="@+id/btn_save_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/selector_btn_enabled"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:text="@string/text_save"/>
    </LinearLayout>
</LinearLayout>